<resources>
    <string name="app_name">BachelorThesis</string>
    <string name="action_settings">Settings</string>
    <string name="event_activity">Event Activity</string>
    <string name="add_event_activity">Add a new event</string>
    <string name="add_event_appointment">Add a new appointment</string>
    <string name="add_event_deadline">Add a new deadline</string>
    <string name="event_description_hint">Event description (optional)</string>
    <string name="event_location_hint">Event location (optional)</string>
    <string name="event_summary_hint">Event summary</string>
    <string name="submit">Submit</string>
    <string name="select_geo_location">Select geo location</string>
    <string name="from_date">From Date</string>
    <string name="to_date">Select Date</string>
    <string name="day_view">Tag</string>
    <string name="three_day_view">3-Tage</string>
    <string name="week_view">Woche</string>
    <string name="settings">Settings</string>
    <string name="log_out">Sign out</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="email_hint">Enter email address</string>
    <string name="edit_event">Updating event</string>
    <string name="loading">Loading...</string>
    <string name="ical_url_placeholder">Paste iCal URL here</string>
    <string name="import_text">Import</string>
    <string name="refresh">Refresh</string>
    <string name="importing_now">Now importing your iCal file. Please wait!</string>
    <string name="import_error">An error occurred while importing your events. Please make sure you have an active internet connection and your URL is valid!</string>
    <string name="import_success">Your events were imported successfully! They will be synced from now on every 15 minutes. Please refresh your calendar to view them.</string>
    <string name="appointment">Termin</string>
    <string name="school_appointment">Schulstunde</string>
    <string name="deadline">Abgabe</string>
    <string name="failed_server_connection">Failed to connect to server, loading cached data...</string>
    <string name="edit">Bearbeiten</string>
    <string name="description">Description</string>
</resources>
