<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_homepage_navigation_calendar_group"
        >
        <item
            android:id="@+id/menu_homepage_day"
            android:title="@string/day_view"
            android:icon="@drawable/ic_view_day_white_24dp"
            />
        <item
            android:id="@+id/menu_homepage_three_days"
            android:title="@string/three_day_view"
            android:icon="@drawable/ic_view_column_white_24dp"
            />
        <item
            android:id="@+id/menu_homepage_week"
            android:title="@string/week_view"
            android:icon="@drawable/ic_view_week_white_24dp"
            />
    </group>

    <group
        android:id="@+id/menu_homepage_navigation_group"
        >
        <item
            android:id="@+id/menu_homepage_bfew"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings_white_24dp"
            />
        <item
            android:id="@+id/menu_homepage_log_out"
            android:title="@string/log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            />
    </group>

</menu>